--- a/app/views/about/faq/show.html.erb
+++ b/app/views/about/faq/show.html.erb
@@ -1,58 +1,50 @@
-<% content_for :stylesheets do %>
-  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
-<% end %>
-<% content_for :javascripts do %>
-  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'throw "Loading Javascript " + this.src + " failed"' %>
-<% end %>
+<%= render "shared/header" %>
 
-<div class="site-wrapper-first">
-  <%= render "shared/header_old" %>
-  <div class="inner faq">
+<section class="section-padding">
+  <h1 class="heading-xl mb-12"><%= title(t('faq')) %></h1>
 
-    <span class="glyphicon glyphicon-large glyphicon-globe" aria-hidden="true"></span>
-
-    <h1 class="cover-heading"><%= title(t('faq')) %></h1>
-    <% description(t('faq')) %>
-
-    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-      <div class="panel panel-default questions-list">
-          <% t('faq_questions').each do |category_key, category| %>
-              <p><b><%= category[:heading] %></b></p>
-              <ul>
-              <% category[:questions].each do |question_key, question| %>
-                <li>
-                  <a href="#collapse-<%= "#{category_key}-#{question_key}" %>-id">
-                    <%= question[:question] %>
-                  </a>
-                </li>
-              <% end %>
-              </ul>
-          <% end %>
-      </div>
-
-      <% t('faq_questions').each do |category_key, category| %>
-        <h3 style="margin: 24px 0 16px"><%= category[:heading] %></h3>
+  <div class="section-gutter flex flex-col d:flex-row d:flex-wrap">
+    <% t('faq_questions').each do |category_key, category| %>
+      <div class="d:w-1/3">
+        <h2 class="heading my-3"><%= category[:heading] %></h2>
+        <ul class="list-bullet space-y-3">
         <% category[:questions].each do |question_key, question| %>
-          <div id="collapse-<%= "#{category_key}-#{question_key}" %>-id" ></div>
+          <a href="#<%= "#{category_key}-#{question_key}" %>"class="link">
+          <li>
+              <%= question[:question] %>
+            </a>
+          </li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+  </div>
+</section>
 
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="<%= "#{category_key}-#{question_key}" %>">
-              <h4 class="panel-title">
-                <a role="button" data-toggle="collapse" href="#collapse-<%= "#{category_key}-#{question_key}" %>" aria-expanded="true" aria-controls="collapse-<%= "#{category_key}-#{question_key}" %>">
+<section class="section-padding">
+  <div>
+    <% t('faq_questions').each do |category_key, category| %>
+        <h2 class="heading-lg mt-12 mb-6 d:text-center"><%= category[:heading] %></h2>
+        <% category[:questions].each do |question_key, question| %>
+          <div id="<%= "#{category_key}-#{question_key}" %>" class="absolute -mt-20"></div>
+          <div class="callout my-6 d:max-w-3/4 d:mx-auto">
+
+            <input type="checkbox" id="<%= "#{category_key}-#{question_key}" %>-id" class="toggler">
+
+            <label for="<%= "#{category_key}-#{question_key}" %>-id" class="flex items-center justify-between cursor-pointer space-x-4">
+              <h3 class="heading">
                   <%= question[:question] %>
-                </a>
-              </h4>
-            </div>
+              </h3>
+              <span class="fa fa-chevron-down transform toggler-checked:rotate-180 transition-transform duration-200"></span>
+            </label>
 
-            <div id="collapse-<%= "#{category_key}-#{question_key}" %>" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="<%= "#{category_key}-#{question_key}" %>">
-              <div class="panel-body"><%= raw question[:answer] %></div>
+            <div class="hidden toggler-checked:block">
+              <p class="mt-3"><%= raw question[:answer] %></p>
             </div>
           </div>
-          <br>
         <% end %>
       <% end %>
-    </div>
   </div>
-</div>
+</section>
 
-<%= render "shared/footer_old" %>
+<%= render "shared/footer" %>
