--- a/app/views/users/subscriptions/show.html.erb
+++ b/app/views/users/subscriptions/show.html.erb
@@ -11,7 +11,7 @@
         <li class="px-2 py-1 bg-primary text-white hover:bg-green-shade-1 transition ease-in-out duration-200"><%= link_to t('payment_settings'), user_subscription_path %></li>
       </ul>
     </div>
-    <div class="callout max-w-xl mx-auto" data-controller="edit-card">
+    <div class="callout max-w-xl mx-auto">
       <%= form_tag({ action: :update }, id: "payment-form", method: :put, class: "space-y-3") do %>
 
         <% if flash[:error].present? %>
@@ -45,38 +45,42 @@
           </div>
         </div>
 
-        <div>
+        <div id="current-card-group">
           <label for="current-card" class="font-bold">
             <%=t 'credit_or_debit_card' %>
           </label>
 
-          <div>
+          <div id="current-card" class="m-lg:flex m-lg:items-center">
             <% if @customer_payment_method.nil? %>
               t('no_card_registered')
             <% else %>
-              <div class="input flex justify-between">
+              <div class="flex-1">
                 <span>
-                  <span class="card-<%= card_brand(@customer_payment_method) %>"></span>
+                  <% if card_brand(@customer_payment_method) == 'visa' %>
+                    <span class="card-visa"></span>
+                  <% elsif card_brand(@customer_payment_method) == 'mastercard' %>
+                    <span class="card-mastercard"></span>
+                  <% end %>
                   <%= masked_card_number(@customer_payment_method) %>
                 </span>
                 <span class="card-expiration"><%= card_expiration(@customer_payment_method) %></span>
+                
               </div>
             <% end %>
-            <div class="mt-1">
-              <button type="button" class="button" data-action="click->edit-card#addNewCard"><%= @customer_payment_method.nil? ? t('add_new_card') : t('edit_card') %></button>
+
+            <div class="mt-1 capitalize">
+              <a href="#" id="add-new-card" class="button"><%= @customer_payment_method.nil? ? t('add_new_card') : t('edit_card') %></a>
             </div>
           </div>
+
         </div>
         
-        <div class="hidden" data-target="edit-card.newCard" data-active-class="block">
-          <div id="new-card-div" data-controller="stripe-card-element">
-            <label for="card-element" class="font-bold"><%=t 'add_new_card' %></label>
-            <div id="card-element" class="input" data-target="stripe-card-element.container"></div>
-            <div class="text-orange-shade-1" data-target="stripe-card-element.errors"></div>
-          </div>
-
-          <div id="card-errors"></div>
+        <div id="new-card-div" class="hidden">
+          <label for="card-element" class="font-bold"><%=t 'add_new_card' %></label>
+          <div id="card-element" class="input py-1"></div>
         </div>
+
+        <div id="card-errors"></div>
 
         <div>
           <i class="fa fa-lock" aria-hidden="true"></i> <span class="ml-1">Secured by Stripe</span>
@@ -97,3 +101,12 @@
 </div>
 
 <%= render "shared/footer", skip_prefooter: true %>
+
+
+<% content_for :javascript_tags do %>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      initializeEditCard();
+    });
+  </script>
+<% end %>
